# ai_newsletter

./: .env.example  .gitignore  README.md  cli.py  config.py  config.py.example  email.html  fetch_news.py  formatter.py  gnews_api.py  google_redirect.py  logger_config.py  main.py  project_requirements.md  pyproject.toml  pytest.ini  requirements.txt  send_email.py  setup.cfg  summarize.py  test.py  test_fetch_news.py  test_webdriver_pool.py  todo.md  webdriver_pool.py
.github/workflows/: daily-newsletter.yml  test-email.yml
ai_newsletter/: __init__.py  cli.py
ai_newsletter/config/: settings.py
ai_newsletter/core/: __init__.py  constants.py  types.py
ai_newsletter/deploy/: __init__.py  url_builder.py
ai_newsletter/email/: sender.py
ai_newsletter/feeds/: __init__.py  fetcher.py  filters.py  gnews_api.py  gnews_client.py
ai_newsletter/formatting/: __init__.py  categorization.py  components.py  date_utils.py  deduplication.py  formatter.py  layout.py  render.py  tags.py  template_renderer.py  text_utils.py
ai_newsletter/llm/: __init__.py  prompts.py  summarize.py  utils.py
ai_newsletter/selenium_pool/: pool.py
ai_newsletter/utils/: redirects.py  summarize.py
ai_newsletter/web/: __init__.py  archive.py
ai_newsletter/web/templates/: archive_index.html  sitemap.xml
docs/: api-integration.md  configuration.md
output/: newsletter.html
templates/: newsletter.html
tests/: test_email_send.py  test_fetch_news.py  test_fetcher_validation.py  test_smtp_direct.py  test_web_archive.py
