[project]
name = "ai-newsletter"
version = "0.1.0"
description = "AI-powered news aggregator and newsletter generator"
authors = []
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "gnews>=0.2.7",
    "pytz>=2024.1",
    "python-dateutil>=2.8.2",
    "beautifulsoup4>=4.11.0",
    "concurrent_log_handler>=0.9.20"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0"
]