[project]
name = "ai-newsletter"
version = "0.1.0"
description = "AI-powered news aggregator and newsletter generator"
authors = []
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "certifi>=2023.11.17",
    "click>=8.1.7",
    "concurrent-log-handler>=0.9.24",
    "gnews>=0.3.6",
    "openai>=1.3.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "country-list>=1.1.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.1.0"  # Added for handling test timeouts
]